--- a/app/views/chessVue.scala.html
+++ b/app/views/chessVue.scala.html
@@ -3,12 +3,12 @@
 
 @piece(i: Int, j: Int) = @{""}
 
+    @()
 
 @main("HTWG Schach") {
 
-    <script src="@routes.Assets.versioned("javascripts/vue.js")" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.js"></script>
     <script src='@routes.Assets.versioned("vue/components/chess-app.js")'></script>
-    <script src="@routes.Assets.versioned("polymer-3-first-element/icon-toggle-finished/icon-toggle.js")"></script>
     <link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/chess.css")' />
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -30,6 +30,15 @@
     </nav>
 
     <div id="chess-app"></div>
+
+    <script>
+    var app = new Vue({
+    el: '#chess-app',
+    render: function(html) {
+    return html(ChessApp.default, {});
+    }
+    })
+    </script>
 
     <div class="buttoncontainer">
         <a href="/restart" class="btn btn-primary">Restart<br></a>
